# platform

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  asgi.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  datasets.py  health.py  jobs.py  projects.py  router.py  tiles.py
backend/app/core/: config.py  db.py  errors.py  logging.py  metrics.py  middleware.py  ratelimit.py  security.py
backend/app/domain/: dtos.py  enums.py
backend/app/repositories/: audit.py  datasets.py  jobs.py  projects.py  users.py
backend/app/services/: auth_service.py  jobs_service.py  project_service.py  tile_renderer.py  tile_service.py
backend/app/services/ingestion/: cog.py  raster.py  service.py  storage.py
backend/app/services/sampling/: agb_two_phase.py
backend/app/workers/: arq_worker.py  jobs.py  queue.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_jobs.py  0003_project_soft_delete.py  0004_layer_cog.py  0005_dataset_type_satellite.py  0006_layer_symbology.py
backend/scripts/: create_admin.py  gee_phase1_agb_proxy.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_contract.py  test_db_repositories.py  test_jobs_idempotency.py  test_project_soft_delete.py  test_tile_ingest_e2e.py  test_upload_idempotency_e2e.py
backend/tests/unit/: test_agb_two_phase.py  test_cog.py  test_config.py  test_evolution.py  test_pagination.py  test_raster_stats.py  test_security.py  test_tile_renderer.py
deploy/: .env.example  docker-compose.yml
docs/: CHANGELOG_PHASE1.md  MIGRATION.md  ROADMAP.md  SOP_dMRV_Dashboard_Full.md  SRS_dMRV_Dashboard.md  VERIFICATION.md  (+2 more)
(+68 files in other folders)
